--- a/index.ipynb
+++ b/index.ipynb
@@ -20,6 +20,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To read:\n",
+    "### Papers\n",
+    "- [A Researcher's Guide to Mass Spectrometry-based Proteomics](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5198776/)\n",
+    "- [Evaluation of Peak-Picking Algorithms for Protein Mass Spectrometry](https://www.researchgate.net/publication/47730346_Evaluation_of_Peak-Picking_Algorithms_for_Protein_Mass_Spectrometry)\n",
+    "\n",
+    "### Website\n",
+    "- [High-resolution accurate mass (HRAM) for metabolomics and lipidomics](https://www.thermofisher.com/se/en/home/industrial/mass-spectrometry/mass-spectrometry-learning-center/mass-spectrometry-applications-area/metabolomics-mass-spectrometry/overview-mass-spectrometry-metabolomics/hram-mass-spectrometry-metabolomics.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -193,10 +206,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
